--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -20,6 +20,8 @@
           <li><a href="{% url 'catalog:authors' %}">All authors</a></li>
           {% if user.is_authenticated %}
           <li>User: {{ user.get_username }}</li>
+          <li><a href="{% url 'catalog:my-borrowed' %}">My Borrowed</a></li>
+
           <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
           {% else %}
           <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
