--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -19,12 +19,16 @@
           <li><a href="{% url 'catalog:books' %}">All books</a></li>
           <li><a href="{% url 'catalog:authors' %}">All authors</a></li>
           {% if user.is_authenticated %}
-          <li>User: {{ user.get_username }}</li>
-          <li><a href="{% url 'catalog:my-borrowed' %}">My Borrowed</a></li>
+            <li>User: {{ user.get_username }}</li>
+            <li><a href="{% url 'catalog:my_borrowed' %}">My Borrowed</a></li>
 
-          <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
+            <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
           {% else %}
-          <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
+            <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
+          {% endif %}
+
+          {% if perms.catalog.can_mark_returned %}
+            <li ><a href = {% url 'catalog:all_borrowed' %}> Return a book</a></li>
           {% endif %}
         </ul>
      {% endblock %}
@@ -35,17 +39,17 @@
         {% block pagination %}
           {% if is_paginated %}
               <div class="pagination">
-                  <span class="page-links">
-                      {% if page_obj.has_previous %}
-                          <a href="{{ request.path }}?page={{ page_obj.previous_page_number }}">previous</a>
-                      {% endif %}
-                      <span class="page-current">
-                          Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-                      </span>
-                      {% if page_obj.has_next %}
-                          <a href="{{ request.path }}?page={{ page_obj.next_page_number }}">next</a>
-                      {% endif %}
-                  </span>
+               <span class="page-links">
+                   {% if page_obj.has_previous %}
+                      <a href="{{ request.path }}?page={{ page_obj.previous_page_number }}">previous</a>
+                   {% endif %}
+                     <span class="page-current">
+                       Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                     </span>
+                   {% if page_obj.has_next %}
+                       <a href="{{ request.path }}?page={{ page_obj.next_page_number }}">next</a>
+                   {% endif %}
+               </span>
               </div>
           {% endif %}
         {% endblock %}
