--- a/catalog/templates/catalog/bookinstance_list_borrowed_all.html
+++ b/catalog/templates/catalog/bookinstance_list_borrowed_all.html
@@ -1,14 +1,15 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-    <h1>Borrowed books</h1>
-
+    <h1>All Borrowed books</h1>
+    
     {% if bookinstance_list %}
     <ul>
 
       {% for bookinst in bookinstance_list %}
       <li class="{% if bookinst.is_overdue %}text-danger{% endif %}">
-        <a href="{% url 'catalog:book_detail' bookinst.book.pk %}">{{bookinst.book.title}}</a> ({{ bookinst.due_back }})
+        <a href="{% url 'catalog:book_detail' bookinst.book.pk %}">{{bookinst.book.title}}</a>
+        ({{ bookinst.due_back }}) - {{bookinst.borrower.username}}
       </li>
       {% endfor %}
     </ul>
