--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -26,16 +26,24 @@
           {% else %}
             <li><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>
           {% endif %}
+        </ul>
 
+        {% if user.is_staff %}
+        <hr />
+        <ul class="sidebar-nav">
+        <h3>Staff</h3>
           {% if perms.catalog.can_mark_returned %}
-            <li ><a href = {% url 'catalog:all_borrowed' %}> Return a book</a></li>
+        <li><a href="{%url 'catalog:book_create' %}">Add Book</a></li>
           {% endif %}
         </ul>
+         {% endif %}
+
      {% endblock %}
       </div>
       <div class="col-sm-10 ">
         {% block content %}
         {% endblock %}
+
         {% block pagination %}
           {% if is_paginated %}
               <div class="pagination">
