Added ➕the ability, to see "All borrowed books📚"& to "renew books" i.e. the ability to update the due date of a book, for the staff users

--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -33,6 +33,7 @@
         <ul class="sidebar-nav">
         <h3>Staff</h3>
           {% if perms.catalog.can_mark_returned %}
+        <li><a href="{% url 'catalog:all_borrowed' %}">All borrowed</a></li>
         <li><a href="{%url 'catalog:book_create' %}">Add Book</a></li>
           {% endif %}
         </ul>
