--- a/catalog/templates/catalog/bookinstance_list_borrowed_all.html
+++ b/catalog/templates/catalog/bookinstance_list_borrowed_all.html
@@ -9,7 +9,9 @@
       {% for bookinst in bookinstance_list %}
       <li class="{% if bookinst.is_overdue %}text-danger{% endif %}">
         <a href="{% url 'catalog:book_detail' bookinst.book.pk %}">{{bookinst.book.title}}</a>
-        ({{ bookinst.due_back }}) - {{bookinst.borrower.username}}
+        ({{ bookinst.due_back }}) - {{bookinst.borrower.username}} - {% if perms.catalog.can_mark_returned %}
+        <a href="{% url 'catalog:renew_book_librarian' bookinst.id %}">Renew</a>  
+      {% endif %}
       </li>
       {% endfor %}
     </ul>
